templates: pre-arrival passport page to fix misaligned croppie components on iPad

--- a/pre_arrival/static/pre_arrival/scss/mobile/passport.scss
+++ b/pre_arrival/static/pre_arrival/scss/mobile/passport.scss
@@ -28,17 +28,25 @@
 
         .timer-tick {
             position: absolute;
-            width: 34px;
             top: 10px;
-            left: 171px;
+            width: 100%;
+            text-align: center;
             z-index: 2;
         }
         
         #text-preview {
             position: absolute;
-            width: 274px;
             top: 52px;
-            left: 51px;
+            width: 100%;
+            text-align: center;
+            z-index: 2;
+        }
+
+        #rotate-container {
+            position: absolute;
+            bottom: 28px;
+            width: 100%;
+            text-align: center;
             z-index: 2;
         }
 
@@ -47,10 +55,6 @@
             color: #fff;
             width: 56px;
             height: 56px;
-            position: absolute;
-            bottom: 28px;
-            left: 153px;
-            z-index: 2;
         }
     }
 
